Closed
Bug 236897
Opened 22 years ago
Closed 22 years ago
text-decoration: blink: it's impossible to turn off, or on via DOM
Categories
(Core :: DOM: CSS Object Model, defect, P3)
Core
DOM: CSS Object Model
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: gellert.gyuris, Assigned: bzbarsky)
References
Details
(Keywords: testcase)
Attachments
(2 files)
|
1.54 KB,
text/html
|
Details | |
|
1.17 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; hu-HU; rv:1.6) Gecko/20040206 Firefox/0.8
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; hu-HU; rv:1.6) Gecko/20040206 Firefox/0.8
it's impossible to turn off, or on via DOM
Reproducible: Always
Steps to Reproduce:
1. switch text-decoration
2.
3.
| Reporter | ||
Comment 1•22 years ago
|
||
Comment 2•22 years ago
|
||
See also bug 179079 (might be related, but does not involve scripting).
Comment 3•22 years ago
|
||
(In reply to comment #2)
> See also bug 179079 (might be related, but does not involve scripting).
Last testcase does
| Assignee | ||
Comment 4•22 years ago
|
||
Probably an issue with the textframes not killing off the blink timer... The
problem is that text frames are added to and removed from the blink timer in
reflow, but changing text-decoration only does a repaint....
| Assignee | ||
Comment 5•22 years ago
|
||
Come to think of it, can text-decoration affect line-box sizing? If so, could
it need reflow anyway?
I wouldn't have thought they could affect line-box sizing.
I don't see a problem with making text-decoration just do a reflow. It's
unlikely to be performance critical.
I'd rather not make text-decoration changes reflow. changing text-decoration on
:hover (for links) is not uncommon.
| Assignee | ||
Comment 8•22 years ago
|
||
The other option is to reflow only if the "blink" bit changed.... That should
happen about once in a blue moon.
| Assignee | ||
Comment 9•22 years ago
|
||
Though really, maybe we should just remove blink....
Attachment #147476 -
Flags: superreview+
Attachment #147476 -
Flags: review+
(This fixes turning off too?)
| Assignee | ||
Comment 11•22 years ago
|
||
> (This fixes turning off too?)
Yep. Fixes all testcases in this bug and in bug 179079. Taking, I guess.
Assignee: general → bzbarsky
Blocks: 179079
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla1.8alpha
| Assignee | ||
Comment 12•22 years ago
|
||
Checked in for 1.8a.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•