Blink changes need to reflow.  Bug 236897, r+sr=dbaron